8371944: AOT configuration is corrupted when app closes System.out